# The-Market-Maker

./: .gitignore  .pre-commit-config.yaml  AUTO_COMMIT.md  CHANGELOG.md  COMPREHENSIVE_TEST_REPORT.md  COMPREHENSIVE_VERIFICATION_REPORT.md  CONTRIBUTING.md  FINAL_100_100_ACHIEVEMENT.md  FINAL_CHECKLIST.md  FINAL_IMPLEMENTATION_SUMMARY.md  FREE_DATA_SOURCES.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  README_100_100.md  RUN_STATUS.md  SIMULATION_MODE.md  TEST_SUMMARY.md  TRADING_ACTIVITY_FIXES.md  VERIFICATION_COMPLETE.md  fix_alpaca_connection.sh  pyproject.toml  requirements.txt
api/: __init__.py  main.py
api/services/: websocket_manager.py
config/: settings.yaml  watchdog_settings.yaml
dashboard/: README.md  app.py
dashboard/templates/: dashboard.html
frontend/hooks/: useMarketHours.ts  useThrottledUpdates.ts
frontend/stores/: orderStore.ts  positionStore.ts
research/: __init__.py
research/backtesting/: __init__.py  engine.py  walk_forward.py
research/stress_testing/: __init__.py  runner.py
scripts/: auto_commit.sh  calibrate_sentiment.py  demo.py  generate_demo_activity.py  git_auto_push.py  quick_commit.sh  run_backtest.py  run_bot.py  run_bot_simulation.py  run_dashboard.py  run_etl.py  run_live_demo.py  run_tests.py  run_watchdog.py  setup_free_apis.py  show_system_working.py  stress_test_strategy.py  validate_all_strategies.py  verify_setup.py
src/: __init__.py  main.py
src/accounting/: tax_lot_tracker.py
src/auth/: jwt_manager.py
src/execution/: __init__.py  order_manager.py  paper_broker.py  reconciler.py
src/monitoring/: __init__.py  alerter.py  decay_detector.py  metrics.py
src/portfolio/: __init__.py  allocator.py  correlation_matrix.py
src/regime/: __init__.py  detector.py
src/risk/: __init__.py  drawdown_monitor.py  position_sizer.py
src/sentiment/: __init__.py
src/storage/: __init__.py  append_log.py  duckdb_store.py  etl_pipeline.py  redis_state.py
src/strategy/: __init__.py  base.py
src/utils/: __init__.py  market_utils.py
tests/: README.md  __init__.py  conftest.py
tests/backend/: test_api_endpoints.py  test_websocket_manager.py
tests/frontend/: test_ring_buffer.test.ts
tests/integration/: test_data_pipeline.py  test_full_system.py  test_full_trading_flow.py  test_order_reconciliation.py
tests/stress/: __init__.py  run_stress_tests.py  test_10x_spreads.py
tests/unit/: test_cost_model_comprehensive.py  test_data_tiers.py  test_data_validation_comprehensive.py  test_jwt_auth.py  test_order_execution_exhaustive.py  test_order_state_machine.py  test_reconciler.py  test_sentiment_calibration.py  (+7 more)
watchdog/: __init__.py  alert_dispatcher.py  broker_client.py  daemon.py  graceful_shutdown.py  rules.py
(+26 files in other folders)
